openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: santequebec
spec:
  selector:
    app: santequebec
  ports:
    - port: 8080
      targetPort: 8080
